<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: LoremIpsum</string>
    <string name="add">Search</string>
    <string name="app_name">Type 2 diabetes Complications</string>
    <string name="lorem_ipsum">![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.</string>

    <string name="sec_menu_1">Medical guideline | PAINFUL DIABETIC NEUROPATHY</string>
    <string name="sec_menu_2">Medical guideline | CORONARY HEART DISEASE</string>
    <string name="sec_menu_3">Medical guideline | STROKE</string>
    <string name="sec_menu_4">Medical guideline | DIABETIC NEPHROPATHY</string>
    <string name="sec_menu_5">Medical guideline | DIABETIC FOOT</string>
    <string name="sec_menu_6">Medical guideline | DIABETIC RETINOPATHY</string>

    <string name="sec_1">Medical guideline | PAINFUL DIABETIC NEUROPATHY</string>
    <string name="sec_2">Medical guideline | CORONARY HEART DISEASE</string>
    <string name="sec_3">Medical guideline | STROKE</string>
    <string name="sec_4">Medical guideline | DIABETIC NEPHROPATHY</string>
    <string name="sec_5">Medical guideline | DIABETIC FOOT</string>
    <string name="sec_6">Medical guideline | DIABETIC RETINOPATHY</string>

    <string-array name="nameSelectonAnalitycs">
        <item name="sec_1">Medical guideline | PAINFUL DIABETIC NEUROPATHY</item>
        <item name="sec_2">Medical guideline | CORONARY HEART DISEASE</item>
        <item name="sec_3">Medical guideline | STROKE</item>
        <item name="sec_4">Medical guideline | DIABETIC NEPHROPATHY</item>
        <item name="sec_5">Medical guideline | DIABETIC FOOT</item>
        <item name="sec_6">Medical guideline | DIABETIC RETINOPATHY</item>
    </string-array>

    <string-array name="sec_1_menu">
        <item>Definition</item>
        <item>Epidemiology</item>
        <item>Pathophysiology</item>
        <item>Risk factors for diabetic neuropathy</item>
        <item>Symptoms of painful diabetic neuropathy</item>
        <item>Diagnosis</item>
        <item>Treatment for painful diabetic neuropathy</item>
        <item>Treatment algorithm for painful diabetic neuropathy</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_2_menu">
        <item>Epidemiology</item>
        <item>Diabetes Mellitus and Cardiovascular Disease</item>
        <item>Associated risk factors in patients with DM</item>
        <item>Pathophysiology</item>
        <item>Symptoms</item>
        <item>Diagnosis</item>
        <item>Treatment</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_3_menu">
        <item>Definition of stroke</item>
        <item>Classification of stroke</item>
        <item>Epidemiology of diabetes and stroke in diabetic patients</item>
        <item>Risk factors for stroke</item>
        <item>Symptoms of stroke</item>
        <item>Diagnosis of stroke</item>
        <item>Treatment for acute stroke</item>
        <item>Prevention of stroke</item>
        <item>Diagnostic algorithm for ischemic stroke</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_4_menu">
        <item>Definition</item>
        <item>Epidemiology</item>
        <item>Pathophysiology</item>
        <item>Kidney changes in patients with DN</item>
        <item>Classification of DN</item>
        <item>Diagnosis and Follow-up of DN</item>
        <item>Treatment</item>
        <item>Prevention</item>
        <item>Algorithm</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_5_menu">
        <item>Definition</item>
        <item>Epidemiology</item>
        <item>Pathophysiology</item>
        <item>How and why diabetic foot occurs?</item>
        <item>Risk factors for foot ulcers</item>
        <item>Symptoms and signs of diabetic foot</item>
        <item>Foot examination in diabetic patients</item>
        <item>Ulcer assessment in diabetic patients</item>
        <item>Classification of diabetic foot</item>
        <item>Preventive treatment of diabetic foot</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_6_menu">
        <item>Definition</item>
        <item>Epidemiology</item>
        <item>Pathophysiology</item>
        <item>Risk factors</item>
        <item>Classification</item>
        <item>Symptoms</item>
        <item>Diagnosis</item>
        <item>Treatment</item>
        <item>Prevention</item>
        <item>Diagnostic and follow-up algorithm</item>
        <item>References</item>
    </string-array>

    <string-array name="sec_1_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Figure 3</item>
        <item>Figure 4</item>
        <item>Figure 5</item>
        <item>Figure 6</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Figure 7</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
        <item>Table 6</item>
    </string-array>

    <string-array name="sec_2_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Figure 3</item>
        <item>Figure 4</item>
        <item>Figure 5</item>
        <item>Figure 6</item>
        <item>Figure 7</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
    </string-array>

    <string-array name="sec_3_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Figure 3</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
    </string-array>

    <string-array name="sec_4_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Figure 3</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
    </string-array>

    <string-array name="sec_5_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Table 1</item>
        <item>Figure 3</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Figure 4</item>
        <item>Table 4</item>
        <item>Figure 5</item>
        <item>Table 5</item>
        <item>Table 6</item>
        <item>Table 7</item>
        <item>Table 8</item>
        <item>Table 9</item>
    </string-array>

    <string-array name="sec_6_images">
        <item>Figure 1</item>
        <item>Figure 2</item>
        <item>Figure 3</item>
        <item>Figure 4</item>
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Figure 5</item>
        <item>Table 3</item>
    </string-array>

    <string name="downloadFileTitle">Download content</string>
    <string name="downloadFileDialog">You want to download</string>
    <string name="downloadFileAccept">Accept</string>
    <string name="downloadFileCancel">Cancel</string>
    <string name="downloadFileError">Check your internet connection</string>
    <string name="downloadFile">Downloading content. Please wait ...</string>
    <string name="downloadError">"Error downloading"</string>
    <string name="downloadOk">"Download complete"</string>



    <string name="share">Compartir ...</string>
    <string name="folderApp">Diabetes_Complications_T2</string>


    <string name="dialogError">a drawback is presented with the application</string>
    <string name="dialogRestart">Restart </string>
    <string name="dialogTofinalize">Finish </string>
    <string name="dialogDate">This guide is not available at this time, wait soon</string>

    <string name="deposit">Login</string>
    <string name="password">Password</string>
    <string name="dialogErrorPassword">Incorrect password</string>
    <string name="dialogPositiveButton">Yes</string>
    <string name="dialogNegativeButton">No</string>


    <string-array name="dateDistribution">
        <item>07/05/2016</item>
        <item>07/07/2016</item>
        <item>07/09/2016</item>
        <item>07/11/2016</item>
        <item>07/02/2017</item>
        <item>07/04/2017</item>
    </string-array>

</resources>
