<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/one_guide"
            android:title="@string/sec_menu_1" />
        <item
            android:id="@+id/two_guide"
            android:title="@string/sec_menu_2" />
        <item
            android:id="@+id/three_guide"
            android:title="@string/sec_menu_3" />
        <item
            android:id="@+id/four_guide"
            android:title="@string/sec_menu_4" />
        <item
            android:id="@+id/five_guide"
            android:title="@string/sec_menu_5" />
        <item
            android:id="@+id/six_guide"
            android:title="@string/sec_menu_6" />

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
